--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
             <artifactId>javax.persistence-api</artifactId>
             <version>2.2</version>
         </dependency>
+        <dependency>
+            <groupId>top.dcenter</groupId>
+            <artifactId>justAuth-spring-security-starter</artifactId>
+            <version>1.1.25</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
